<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_word"
            android:layout_toStartOf="@id/search_btn"
            android:padding="12dp"
            android:background="@drawable/rounded_corner"/>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/purple"
            android:visibility="gone"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/word_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/purple"/>

    <TextView
        android:id="@+id/phonetic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/t e s t/"
        android:textColor="@color/blue"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/meaning_rv"/>


</LinearLayout>